[gd_scene load_steps=3 format=3 uid="uid://8xtboviqhj5d"]

[ext_resource type="Script" uid="uid://bfdkmgxuq0is2" path="res://game/game.gd" id="1_vasa2"]
[ext_resource type="Texture2D" uid="uid://dasybedxurkup" path="res://assets/graphics/background.png" id="2_h7iqs"]

[node name="Game" type="Node2D"]
script = ExtResource("1_vasa2")

[node name="ReplayTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="PowerupTimer" type="Timer" parent="."]
autostart = true

[node name="Background" type="Node2D" parent="."]

[node name="1" type="Sprite2D" parent="Background"]
texture_repeat = 2
position = Vector2(-800, -450)
texture = ExtResource("2_h7iqs")

[node name="2" type="Sprite2D" parent="Background"]
position = Vector2(800, -450)
texture = ExtResource("2_h7iqs")

[node name="3" type="Sprite2D" parent="Background"]
position = Vector2(-800, 450)
texture = ExtResource("2_h7iqs")

[node name="4" type="Sprite2D" parent="Background"]
position = Vector2(800, 450)
texture = ExtResource("2_h7iqs")

[connection signal="timeout" from="ReplayTimer" to="." method="_on_replay_timeout"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_powerup_timeout"]
